--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,7 @@
-﻿absl-py==0.12.0
-aiohttp==3.7.4.post0
-altgraph==0.17
-astunparse==1.6.3
-async-timeout==3.0.1
-attrs==21.2.0
-click==8.0.3
-comtypes==1.1.8
-cycler==0.10.0
-dateparser==1.0.0
-docutils==0.17.1
-et-xmlfile==1.0.1
-Flask @ file:///tmp/build/80754af9/flask_1634118196080/work
-future==0.18.2
-gast==0.3.3
-google-auth==1.27.1
-google-auth-oauthlib==0.4.3
-google-pasta==0.2.0
-googletrans==3.1.0a0
-grpcio==1.36.1
-gTTS==2.2.2
-h11==0.9.0
-h2==3.2.0
-h5py==2.10.0
-hpack==3.0.0
-hstspreload==2021.11.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imutils==0.5.4
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jdcal==1.4.1
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
-Keras-Preprocessing==1.1.2
-Kivy==2.0.0
-kivy-deps.angle==0.3.0
-kivy-deps.glew==0.3.0
-kivy-deps.sdl2==0.3.1
-Kivy-Garden==0.1.4
-kiwisolver @ file:///C:/ci/kiwisolver_1612282606037/work
-Markdown==3.3.4
-MarkupSafe @ file:///C:/ci/markupsafe_1621528314575/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
-menuinst==1.4.16
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-multidict==5.1.0
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603466732592/work
-oauthlib==3.1.0
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
-opt-einsum==3.3.0
-pandas @ file:///C:/ci/pandas_1614711443373/work
-pefile==2021.5.24
-Pillow @ file:///C:/ci/pillow_1615224342392/work
-playsound==1.2.2
-protobuf==3.15.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.11
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pygame==2.0.1
-Pygments==2.9.0
-pyinstaller==4.3
-pyinstaller-hooks-contrib==2021.1
-pylibdmtx==0.1.9
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1605545627475/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pypiwin32==223
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-pytesseract==0.3.7
-python-binance==1.0.12
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-pyttsx3==2.90
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pywin32==227
-pywin32-ctypes==0.2.0
-pyzbar==0.1.8
-regex==2021.4.4
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-requests-oauthlib==1.3.0
-rfc3986==1.5.0
-rsa==4.7.2
-ruamel-yaml==0.15.87
-scipy==1.4.1
-sip==4.19.13
-six @ file:///C:/ci/six_1605187374963/work
-sniffio==1.2.0
-SpeechRecognition==3.8.1
-subprocess32 @ file:///tmp/build/80754af9/subprocess32_1602000156065/work
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-tornado @ file:///C:/ci/tornado_1606942392901/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1605303662894/work
-typing-extensions==3.10.0.0
-tzlocal==2.1
-ujson==4.0.2
-urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
-websockets==9.1
-Werkzeug @ file:///tmp/build/80754af9/werkzeug_1635505089296/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-wincertstore==0.2
-wrapt==1.12.1
-xlwings==0.23.0
-yarl==1.6.3
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+gunicorn==20.0.4
